Fix sticky process visual by removing vertical overflow clipping

--- a/assets/scss/pages/_services-page.scss
+++ b/assets/scss/pages/_services-page.scss
@@ -4397,7 +4397,8 @@
 .services-process {
   --process-visual-sticky-top: #{mixins.vw(122px)};
   position: relative;
-  overflow: hidden;
+  overflow-x: clip;
+  overflow-y: visible;
   background: var(--color-background);
 
   @include mixins.mobile {
